--- a/Report.html
+++ b/Report.html
@@ -10,7 +10,8 @@
 <body>
   <div class="sidebar">
     <div class="logo-details">
-        <div class="logo_name">Welcome Yousef</div>
+      <i class='bx bxl-c-plus-plus icon'></i>
+        <div class="logo_name">AMY Bank</div>
         <i class='bx bx-menu' id="btn" ></i>
     </div>
     <ul class="nav-list">
@@ -36,9 +37,9 @@
       <li>
         <a href="Credit.html">
           <i class='bx bxs-wallet-alt'></i>
-          <span class="links_name">CreditCard Pay Or View</span>
+          <span class="links_name">CreditCard Actions</span>
         </a>
-        <span class="tooltip">CreditCard Pay Or View</span>
+        <span class="tooltip">CreditCard Actions</span>
       </li>
       <li>
         <a href="./Transaction.html">
@@ -69,18 +70,11 @@
          <span class="tooltip">Notification</span>
       </li>
      <li>
-       <a href="./Remainder.html">
+       <a href="./Reminder.html">
         <i class='bx bxs-calendar'></i>
-         <span class="links_name">Remainder</span>
+         <span class="links_name">Reminder</span>
        </a>
-       <span class="tooltip">Remainder</span>
-     </li>
-     <li>
-       <a href="#">
-         <i class='bx bx-cog' ></i>
-         <span class="links_name">Setting</span>
-       </a>
-       <span class="tooltip">Setting</span>
+       <span class="tooltip">Reminder</span>
      </li>
      <li class="profile">
          <div class="profile-details">
